Fixed the 'transparent borders' issue seen in spherify and other filters. Resized the children of the content #container to not overflow. Trimmed the extra white space in the shader princess SVG file. Shortened the height of the #multi-col from 500px to 400px.

--- a/style/css/app.css
+++ b/style/css/app.css
@@ -3218,7 +3218,7 @@ aside {
   -ms-column-gap: 2em;
   -o-column-gap: 2em;
   column-gap: 2em;
-  height: 500px;
+  height: 400px;  
 }
 #container #multi-col h2 {
   color: #60C5DF;
@@ -3229,8 +3229,8 @@ aside {
 #container #svg-img {
   display: block;
   position: absolute;
-  right: -40px;
-  top: 70px;
+  right: 20px;
+  top: 100px;
 }
 #container #png-img {
   display: block;
